--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jesuscent.github.io/MyPortafolio/",
+  "homepage": "https://jesuscent.github.io/JesusCenteno/",
   "name": "portafolio",
   "version": "0.1.0",
   "private": true,
